canary/nginx-ingress/app-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-cas-v2
  namespace: andy-test
  labels:
    app: my-cas
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: my-cas
    version: v7.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-cas-v2
  namespace: andy-test
  labels:
    app: my-cas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-cas
      version: v7.0.0
  template:
    metadata:
      labels:
        app: my-cas
        version: v7.0.0
    spec:
      containers:
      - name: my-cas
        image: containersol/k8s-deployment-strategies
        ports:
        - name: http
          containerPort: 8080
        - name: probe
          containerPort: 8086
        livenessProbe:
          httpGet:
            path: /live
            port: probe
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: probe
          periodSeconds: 5
