canary/nginx-ingress/ingress-v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-cas
  namespace: andy-test
  labels:
    app: my-cas-v1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    nginx.ingress.kubernetes.io/session-cookie-secure: "true"
    nginx.ingress.kubernetes.io/session-cookie-name: "POCCOOKIE"
    nginx.ingress.kubernetes.io/session-cookie-expires: "86400"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "86400"
    nginx.ingress.kubernetes.io/session-cookie-samesite: "None"
    nginx.ingress.kubernetes.io/session-cookie-conditional-samesite-none: "true"
spec:
  ingressClassName: os-nginx
  rules:
  - host: dev3-ebs-eks1-os-nginx-corp.dev.corp.evbg.io
    http:
      paths:
        - path: /andy-test(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: my-cas-v1
              port:
                number: 80
