canary/nginx-ingress/ingress-v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
  namespace: andy-test
  labels:
    app: my-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: os-nginx
  rules:
  - host: dev3-ebs-eks1-os-nginx-corp.dev.corp.evbg.io
    http:
      paths:
        - path: /andy-test(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: my-app-v2
              port:
                number: 80
